syntax = "proto3";

package  netmarks_gold;

option go_package = "NetMARKS/services/gold/proto";

service Gold {
  rpc Produce(Request) returns (Response) {}
}

message Request {
  uint64 quantity = 1;
  string response_size = 2;
}

message Response {
  uint64 quantity = 1;
  repeated Single items = 2;
}

message Single {
  string id = 1;
  string random_metadata = 2;
  string bread_id = 3;
  string fish_id = 4;
  string meat_id = 5;
}
